# construction-submittal-agent

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
api/routes/: documents.py  health.py  review.py
scripts/: embedding_pipeline.py
static/: index.html
submittal_agent/: config.py
submittal_agent/agent/: llm_client.py  prompts.py  review_agent.py  vision_analyzer.py
submittal_agent/indexing/: pinecone_store.py  vector_store.py
submittal_agent/ingestion/: image_extractor.py  pdf_parser.py
submittal_agent/retrieval/: retriever.py
submittal_agent/schemas/: review_response.py
